--- a/portfolio.html
+++ b/portfolio.html
@@ -70,10 +70,10 @@
           </li>
         </ul>
           <ul class="block-photo">
-            <li class="items-photo">
-              <a href="#" class="items-photo__link" target="blank" rel="noopener noreferrer">
+            <li class="block-photo__items">
+              <a href="#" class="block-photo__link" target="blank" rel="noopener noreferrer">
 
-                <div class="item-photo__wrap">
+                <div class="block-photo__wrap">
                 <img
                   class="images"
                   src="./images/tehnokrak.jpg"
@@ -87,7 +87,7 @@
                     про компанію чи приватну особу. 
                     </p>
               </div>
-                <div class="filling">
+                <div class="block-photo__filling">
                   <h3 class="title">Технокряк</h3>
                   <p class="block-photo__discription discription">Веб-сайт</p>
                 </div>
