--- a/portfolio.html
+++ b/portfolio.html
@@ -95,9 +95,9 @@
               </a>
             </li>
 
-            <li class="items-photo">
-              <a href="#" class="items-photo__link" target="blank" rel="noopener noreferrer">
-                <div class="item-photo__wrap">
+            <li class="block-photo__items">
+              <a href="#" class="block-photo__link" target="blank" rel="noopener noreferrer">
+                <div class="block-photo__wrap">
                 <img
                   class="images"
                   src="./images/poster.jpg"
@@ -119,9 +119,9 @@
               </a>
             </li>
 
-            <li class="items-photo">
-              <a href="#" class="items-photo__link" target="blank" rel="noopener noreferrer">
-                <div class="item-photo__wrap">
+            <li class="block-photo__items">
+              <a href="#" class="block-photo__link" target="blank" rel="noopener noreferrer">
+                <div class="block-photo__wrap">
                 <img
                   class="images"
                   src="./images/restoran.jpg"
@@ -141,9 +141,9 @@
                 </div>
               </a>
             </li>
-            <li class="items-photo">
-              <a href="#" class="items-photo__link" target="blank" rel="noopener noreferrer">
-                <div class="item-photo__wrap">
+            <li class="block-photo__items">
+              <a href="#" class="block-photo__link" target="blank" rel="noopener noreferrer">
+                <div class="block-photo__wrap">
                 <img
                   class="images"
                   src="./images/prime.jpg"
@@ -164,9 +164,9 @@
               </a>
             </li>
 
-            <li class="items-photo">
-              <a href="#" class="items-photo__link" target="blank" rel="noopener noreferrer">
-                <div class="item-photo__wrap">
+            <li class="block-photo__items">
+              <a href="#" class="block-photo__link" target="blank" rel="noopener noreferrer">
+                <div class="block-photo__wrap">
                 <img
                   class="images"
                   src="./images/boxes.jpg"
@@ -187,9 +187,9 @@
               </a>
             </li>
 
-            <li class="items-photo">
-              <a href="#" class="items-photo__link" target="blank" rel="noopener noreferrer">
-                <div class="item-photo__wrap">
+            <li class="block-photo__items">
+              <a href="#" class="block-photo__link" target="blank" rel="noopener noreferrer">
+                <div class="block-photo__wrap">
                 <img
                   class="images"
                   src="./images/no-borders.jpg"
@@ -210,9 +210,9 @@
               </a>
             </li>
 
-            <li class="items-photo">
-              <a href="#" class="items-photo__link" target="blank" rel="noopener noreferrer">
-                <div class="item-photo__wrap">
+            <li class="block-photo__items">
+              <a href="#" class="block-photo__link" target="blank" rel="noopener noreferrer">
+                <div class="block-photo__wrap">
                 <img
                   class="images"
                   src="./images/limlted.jpg"
@@ -233,9 +233,9 @@
               </a>
             </li>
 
-            <li class="items-photo">
-              <a href="#" class="items-photo__link" target="blank" rel="noopener noreferrer">
-                <div class="item-photo__wrap">
+            <li class="block-photo__items">
+              <a href="#" class="block-photo__link" target="blank" rel="noopener noreferrer">
+                <div class="block-photo__wrap">
                 <img
                   class="images"
                   src="./images/project-lab.jpg"
@@ -256,8 +256,8 @@
               </a>
             </li>
             <li class="items-photo">
-              <a href="#" class="items-photo__link" target="blank" rel="noopener noreferrer">
-                <div class="item-photo__wrap">
+              <a href="#" class="block-photo__link" target="blank" rel="noopener noreferrer">
+                <div class="block-photo__wrap">
                 <img
                   class="images"
                   src="./images/groving.jpg"
