--- a/portfolio.html
+++ b/portfolio.html
@@ -111,7 +111,7 @@
                    про компанію чи приватну особу. 
                     </p>
                   </div>
-                <div class="filling">
+                <div class="block-photo__filling">
                   <h3 class="title">Постер New Orlean vs Golden Star</h3>
                   <p class="block-photo__discription discription">Дизайн</p>
                 </div>
@@ -135,7 +135,7 @@
                    про компанію чи приватну особу. 
                    </p>
                 </div>
-                <div class="filling">
+                <div class="block-photo__filling">
                   <h3 class="title">Ресторан Seafood</h3>
                   <p class="block-photo__discription discription">Додаток</p>
                 </div>
@@ -157,7 +157,7 @@
                    про компанію чи приватну особу. 
                    </p>
               </div>
-                <div class="filling">
+                <div class="block-photo__filling">
                   <h3 class="title">Проєкт Prime</h3>
                   <p class="block-photo__discription discription">Маркетинг</p>
                 </div>
@@ -180,7 +180,7 @@
                    про компанію чи приватну особу. 
                    </p>
               </div>
-                <div class="filling">
+                <div class="block-photo__filling">
                   <h3 class="title">Проєкт Boxes</h3>
                   <p class="block-photo__discription discription">Додаток</p>
                 </div>
@@ -203,7 +203,7 @@
                    про компанію чи приватну особу. 
                    </p>
               </div>
-                <div class="filling">
+                <div class="block-photo__filling">
                   <h3 class="title">Inspiration has no Borders</h3>
                   <p class="block-photo__discription discription">Веб-сайт</p>
                 </div>
@@ -226,7 +226,7 @@
                    про компанію чи приватну особу. 
                    </p>
               </div>
-                <div class="filling">
+                <div class="block-photo__filling">
                   <h3 class="title">Видання Limited Edition</h3>
                   <p class="block-photo__discription discription">Дизайн</p>
                 </div>
@@ -249,7 +249,7 @@
                    про компанію чи приватну особу. 
                    </p>
               </div>
-                <div class="filling">
+                <div class="block-photo__filling">
                   <h3 class="title">Проєкт LAB</h3>
                   <p class="block-photo__discription discription">Маркетинг</p>
                 </div>
@@ -271,7 +271,7 @@
                    про компанію чи приватну особу. 
                    </p>
               </div>
-                <div class="filling">
+                <div class="block-photo__filling">
                   <h3 class="title">Growing Business</h3>
                   <p class="block-photo__discription discription">Додаток</p>
                 </div>
