--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             >Web<span >Studio</span></a
           >
           <ul class="site-nave list">
-            <li><a href="./index.html" class="linkcurrent link">Студія</a></li>
-            <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-            <li><a href="./index.html" class="link">Контакти</a></li>
+            <li class="site-nave__item"><a href="./index.html" class="linkcurrent site-nave__link link">Студія</a></li>
+            <li class="site-nave__item"><a href="./portfolio.html" class="site-nave__link link">Портфоліо</a></li>
+            <li class="site-nave__item"><a href="./index.html" class="site-nave__link link">Контакти</a></li>
           </ul>
         </nav>
         <ul class="adress-head list">
