--- a/portfolio.html
+++ b/portfolio.html
@@ -22,10 +22,10 @@
           <a class="header__logo logo" href="index.html"
             >Web<span >Studio</span></a
           >
-          <ul class="site-nave list">
-            <li><a href="./index.html" class=" link">Студія</a></li>
-            <li><a href="./portfolio.html" class="linkcurrent link">Портфоліо</a></li>
-            <li><a href="./index.html" class="link">Контакти</a></li>
+          <ul class="site-nave ">
+            <li class="site-nave__item"><a href="./index.html" class="site-nave__link link">Студія</a></li>
+            <li class="site-nave__item"><a href="./portfolio.html" class="linkcurrent  site-nave__link link">Портфоліо</a></li>
+            <li class="site-nave__item"><a href="./index.html" class="site-nave__link link">Контакти</a></li>
           </ul>
         </nav>
         <ul class="adress-head list">
