--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                 >Умови договору</a
               >
             </div>
-            <button class="send_btn" type="submit">Відправити</button>
+            <button class="send-btn" type="submit">Відправити</button>
           </form>
         </div>
       </div>
