--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </div>
       </section>
 
-      <section class="our-team_section section">
+      <section class="our-team__section section">
         <div class="our-team__conteiner conteiner">
           <h2 class="h2-title title">Наша команда</h2>
           <ul class="our-team__list ">
@@ -646,9 +646,9 @@
             </div>
 
             <div class="privacy">
-              <input type="checkbox" name="mail_send" id="mail_send" />
-              <label for="mail_send">Погоджуюся з розсилкою та приймаю </label>
-              <a href="#" target="_blank" rel="nooper noreferrer"
+              <input class="privacy__input" type="checkbox" name="mail_send" id="mail_send" />
+              <label class="privacy__label" for="mail_send">Погоджуюся з розсилкою та приймаю </label>
+              <a class="privacy__link" href="#" target="_blank" rel="nooper noreferrer"
                 >Умови договору</a
               >
             </div>
