--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
     >
     <link rel="stylesheet" href="./css/modern-normalize.css" >
     <link rel="stylesheet" href="./css/styles.css" >
+    <link rel="stylesheet" href="./css/main.css" >
   </head>
 
   <body>
