--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="header">
       <div class="conteiner header__conteiner">
         <nav class="header__nav">
           <a class="header__logo logo" href="index.html"
