--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   </head>
 
   <body>
-    <header>
+    <header class="header">
       <div class="conteiner header__conteiner">
         <nav class="header__nav">
           <a class="header__logo logo" href="index.html"
             >Web<span >Studio</span></a
           >
-          <ul class="site-nave list">
+          <ul class="site-nave">
             <li class="site-nave__item"><a href="./index.html" class="linkcurrent site-nave__link link">Студія</a></li>
             <li class="site-nave__item"><a href="./portfolio.html" class="site-nave__link link">Портфоліо</a></li>
             <li class="site-nave__item"><a href="./index.html" class="site-nave__link link">Контакти</a></li>
@@ -48,8 +48,8 @@
       </div>
     </header>
     <main>
-      <section class="hero-section section">
-        <div class="hero-section__conteiner conteiner">
+      <section class="hero-section">
+        <div class="conteiner hero-section__conteiner">
           <h1 class="hero-section__title">Ефективні рішення для вашого бізнесу</h1>
           <button class="order-button" data-modal-open>Замовити послугу</button>
         </div>
