--- a/index.html
+++ b/index.html
@@ -157,37 +157,37 @@
           <h2 class="action-photo__title title">Чим ми займаємося</h2>
 
           <ul class="action-photo__list list">
-            <li class="item-photo__action">
+            <li class="action-photo__item">
               <img
                 src="./images/functions-1.jpg"
                 alt="Набирає код на клавіатурі"
                 width="370"
               />
-              <p class="discrip-photo__action">Десктопні додатки</p>
+              <p class="action-photo__discription">Десктопні додатки</p>
             </li>
 
-            <li class="item-photo__action">
+            <li class="action-photo__item">
               <img
                 src="./images/functions-2.jpg"
                 alt="Синхронізує з телефоном"
                 width="370"
               />
-              <p class="discrip-photo__action">Мобільні додатки</p>
+              <p class="action-photo__discription">Мобільні додатки</p>
             </li>
 
-            <li class="item-photo__action">
+            <li class="action-photo__item">
               <img
                 src="./images/functions-3.jpg"
                 alt="Обирає палітру на планшеті"
                 width="370"
               />
-              <p class="discrip-photo__action">Дизайнерські рішення</p>
+              <p class="action-photo__discription">Дизайнерські рішення</p>
             </li>
           </ul>
         </div>
       </section>
 
-      <section class="our-team__section section">
+      <section class="our-team section">
         <div class="our-team__conteiner conteiner">
           <h2 class="h2-title title">Наша команда</h2>
           <ul class="our-team__list ">
