--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
           </svg>
         </button> 
 
-          <form action="#" class="modal-form">
+          <form action="#" class="form">
             <div class="form-row">
               <label for="user_name" class="form-row__title">Ім'я</label>
               <div class="form-row__test">
@@ -586,7 +586,7 @@
                   minlength="3"
                   maxlength="20"
                 />
-                <svg class="icon" width="18" height="18">
+                <svg class="form-row__svg icon" width="18" height="18">
                   <use xlink:href="./images/sprite.svg#icon-person"></use>
                 </svg>
               </div>
@@ -604,7 +604,7 @@
                   minlength="13"
                   maxlength="13"
                 />
-                <svg class="icon" width="18" height="18">
+                <svg class="form-row__svg icon" width="18" height="18">
                   <use xlink:href="./images/sprite.svg#icon-phone"></use>
                 </svg>
               </div>
@@ -622,7 +622,7 @@
                   minlength="3"
                   maxlength="20"
                 />
-                <svg class="icon" width="18" height="18">
+                <svg class="form-row__svg icon" width="18" height="18">
                   <use xlink:href="./images/sprite.svg#icon-email"></use>
                 </svg>
               </div>
@@ -684,7 +684,7 @@
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="contacts__info list">
+              <li class="contacts-info list">
                 <a
                   href="+380961111111"
                   target="_blank"
